# ndi_tv_player

./: .gitignore  LICENSE  README.md  build.gradle.kts  build_autopilot.txt  build_autopilot_final.txt  build_final.txt  build_warnings.txt  generate_icons.py  lint_output.txt  settings.gradle.kts
.agent/skills/environment-check/: SKILL.md
.agent/skills/git-management/: SKILL.md
.agent/skills/ndi-troubleshooting/: SKILL.md
.agent/skills/release-app/: SKILL.md
app/: build.gradle.kts  dreams_ndi_player.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dreamscasino/nditv/: BootReceiver.kt  MainActivity.kt  PlayerActivity.kt
app/src/main/res/drawable/: item_focus.xml  item_selector.xml  list_background.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml  ndi_list_item.xml
app/src/main/res/values/: strings.xml
